--- a/app/Templates/Files/NewFile.html
+++ b/app/Templates/Files/NewFile.html
@@ -5,7 +5,7 @@
                 <div class="card text-black" style="border-radius: 25px;">
                     <div class="card-body p-md-5">
                         <div class="row justify-content-center">
-                            <form action="/edit" method="POST">
+                            <form action="/newfile" method="POST">
                                 <div class="form-group">
                                     <label for="name">Név</label>
                                     <input type="text" class="form-control" id="name"
